--- a/AppStock.ipynb
+++ b/AppStock.ipynb
@@ -16,7 +16,8 @@
     "from dash.dependencies import Input, Output \n",
     "from keras.models import load_model \n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n"
    ]
   },
   {
@@ -29,7 +30,6 @@
     "app = dash.Dash()\n",
     "server = app.server\n",
     "scaler = MinMaxScaler(feature_range = (0, 1))\n",
-    "\n",
     "df_nse = pd.read_csv(\"NSE-Tata-Global-Beverages-Limited.csv\")"
    ]
   },
@@ -141,10 +141,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "middle-piece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: on\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\omhpa\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3426: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "app.layout = html.Div([\n",
     "   \n",
@@ -305,7 +336,7 @@
     "\n",
     "\n",
     "\n",
-    "if __name__=='__StockApp__':\n",
+    "if __name__=='__main__':\n",
     "\tapp.run_server(debug=True)"
    ]
   },
